Simplify and optimize node tree to use static when possible in compose